--- a/settings/_settings.global.scss
+++ b/settings/_settings.global.scss
@@ -6,6 +6,7 @@
 /* ===== CONSTANTS ========================================================== */
 
 // Positioning
+$z-index-max:       9999 !default;
 $z-index-top:       10 !default;
 $z-index-middle:    5 !default;
 $z-index-lower:     1 !default;
