Re-styles quotes and makes error overlay more generic.

--- a/base/_base.typography.scss
+++ b/base/_base.typography.scss
@@ -66,6 +66,13 @@ h5 {
 p {
 }
 
+q:before {
+    content: '';
+}
+q:after {
+    content: '';
+}
+
 a {
     color: $link-colour;
     text-decoration: none;
@@ -85,5 +92,3 @@ ul {
 
 ol {
 }
-
-
