--- a/components/_components.base.scss
+++ b/components/_components.base.scss
@@ -19,5 +19,5 @@
 @import '_components.facts-block.scss';
 @import '_components.degree-requirements.scss';
 @import '_components.video-block.scss';
-@import '_components.error-overlay.scss';
+@import '_components.notification-overlay.scss';
 @import '_components.image-slide-show.scss';
